fixed text alignment

--- a/ca01/static/css/styles.css
+++ b/ca01/static/css/styles.css
@@ -63,3 +63,6 @@ a:hover{
 .answer > h2{
     font-weight: 100;
 }
+.item{
+    width: 500px;
+}
